--- a/css/menu.css
+++ b/css/menu.css
@@ -49,15 +49,15 @@ body {
   }
 
 .nav a {
-    padding: 6px 2px;
-    font-size: 0.95rem;   /* mantém como está */
-    font-weight: 500;
-    white-space: nowrap; /* evita quebra */
-  }
+  color: var(--branco);
+  text-decoration: none;
+  font-size: 0.95rem;
+}
 
 .nav a:hover {
   text-decoration: underline;
 }
+
 
 /* ============================================================
    BUSCA
