--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,10 @@ img {
     width: auto; /* 🔥 deixa o JS controlar */
     justify-content: center;
   }
+
+   .slider {
+    width: calc((260px * 4) + (16px * 3));
+    overflow: hidden;
 }
 
 /* ===== SETAS ===== */
